--- a/web/src/scss/_jscrollpane.scss
+++ b/web/src/scss/_jscrollpane.scss
@@ -21,23 +21,11 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 16px;
+	width: 8px;
 	height: 100%;
-	background: red;
 }
 
-.jspHorizontalBar
-{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 16px;
-	background: red;
-}
-
-.jspVerticalBar *,
-.jspHorizontalBar *
+.jspVerticalBar *
 {
 	margin: 0;
 	padding: 0;
@@ -55,13 +43,13 @@
 
 .jspTrack
 {
-	background: #dde;
+	background: #C0C0BC;
 	position: relative;
 }
 
 .jspDrag
 {
-	background: #bbd;
+	background: #747474;
 	position: relative;
 	top: 0;
 	left: 0;
