--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -64,7 +64,7 @@
 	padding:0;
 	position:absolute;
 	top:315px;
-	width:300px;
+	width:255px;
 	transform: rotate(5deg);
 	-webkit-transform: rotate(5deg);
 	-moz-transform: rotate(5deg);
@@ -86,9 +86,15 @@
 .fight-home .fighter .name {
 	color:#F3F3ED;
 	display:inline-block;
-	font:400 28px/1.1 'Oswald', Verdana, Arial, sans-serif;
+	font:400 24px/1.1 'Oswald', Verdana, Arial, sans-serif;
 	margin:0;
 	padding:0;
+	text-align:center;
+	width:100%;
+	white-space: nowrap;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .fight-home .fighter .name:before, .fight-home .fighter .name:after {
@@ -265,6 +271,7 @@
 	margin:0;
 	padding:0;
 	text-transform: uppercase;
+	white-space:nowrap;
 }
 
 .fighter-infos .result {
@@ -276,5 +283,9 @@
 	color:#C1272D;
 	font-weight:normal;
 }	
+
+.fight-home .winners_list .winner {
+	border-color:#000;
+}
 
 
