--- a/web/src/scss/_header.scss
+++ b/web/src/scss/_header.scss
@@ -49,11 +49,11 @@ header h1 {
 
 header h1 a {
 	border:none;
-	width:auto;
 	margin:0;
 	overflow:hidden;
 	padding:0;
 	text-indent:100%;
+	width:100%;
 	white-space:nowrap;
 }
 
