--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -55,6 +55,7 @@
 	text-indent:100%;
 	white-space:nowrap;
 	width:193px;
+	visibility:hidden;
 }
 
 .fight-home .fighter {
@@ -282,7 +283,7 @@
 .fighter-infos .result strong {
 	color:#C1272D;
 	font-weight:normal;
-}	
+}
 
 .fight-home .winners_list .winner {
 	border-color:#000;
