--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -5,7 +5,7 @@
 .fight-start .fighters {
 	margin: 0 auto;
 	position: relative;
-	top: 150px;
+	top: 140px;
 	width: 400px;
 	height: 300px;
 }
@@ -22,11 +22,19 @@
 	z-index: 11;
 }
 
+.step-2 .fighter_one.yellow, .step-2 .fighter_two.yellow, .step-3 .fighter_one.yellow, .step-3 .fighter_two.yellow, .step-4 .fighter_one.yellow, .step-4 .fighter_two.yellow, .step-6 .fighter_one.yellow, .step-6 .fighter_two.yellow, .step-7 .fighter_one.yellow, .step-7 .fighter_two.yellow {
+	background-position:-190px 0;
+}
+
+.step-5 .fighter_one.has_won, .step-5 .fighter_two.has_won {
+	background-position:-380px 0;
+}
+
 .fight-start .fighter {
 	position: absolute;
 	margin:0;
 	padding:0;
-	width:169px;
+	width:173px;
 	height:202px;
 }
 
@@ -66,6 +74,7 @@
 	position:absolute;
 	top:315px;
 	width:255px;
+	text-align:center;
 	transform: rotate(5deg);
 	-webkit-transform: rotate(5deg);
 	-moz-transform: rotate(5deg);
@@ -98,18 +107,52 @@
 	box-sizing: border-box;
 }
 
-.fight-home .fighter .name:before, .fight-home .fighter .name:after {
+.fight-home .fighter em {
+	font-size:18px;
+	margin:-10px 0 0 0;
+}
+
+.fight-home .fighter strong, .fight-home .fighter em {
+	font-style:normal;
+	font-weight:normal;
+}
+
+.fight-home .fighter span {
+	display:block;
+}
+
+.fight-home .fighter strong:before, .fight-home .fighter strong:after, .fight-home .fighter em:before, .fight-home .fighter em:after {
   display: inline-block;
   overflow: hidden;
   margin: 0 5px;
   padding: 0;
-  width: 12px;
-  height: 6px;
-  background: url(/img/icon/icon-name.png) left top no-repeat;
+  width: 17px;
+  height: 10px;
+  background: url(/img/duels/icon-name.png) left top no-repeat;
   content: " ";
   text-indent: 100%;
   vertical-align: middle;
   white-space: nowrap;
+}
+
+.fight-home .fighter strong:before, .fight-home .fighter em:before {
+	margin:0 10px 0 5px;
+}
+
+.fighter .flag {
+	padding:5px 0 0 0;
+}
+
+.fight-home .bio {
+	color:#5F3001;
+	font:400 12px/1.1 'Lato', Verdana, Arial, sans-serif;
+	padding:5px 0 15px 0;
+	text-transform:uppercase;
+	white-space:nowrap;
+}
+
+.fighter .flag, .fight-home .bio {
+	display:none;
 }
 
 .choose-fighter {
@@ -126,40 +169,12 @@
 }
 
 .fight-container {
-	background:url(/img/duels/background-duels.png) left top no-repeat;
+	background:none;
 	border-top:1px solid #fff;
 	display:block;
 	height:500px;
 	position:relative;
 	z-index:1;
-}
-
-.step-1 .fight-container {
-	background-position:-770px 0;
-}
-
-.step-2 .fight-container {
-	background-position:-1540px 0;
-}
-
-.step-3 .fight-container {
-	background-position:-2310px 0;
-}
-
-.step-4 .fight-container {
-	background-position:-3080px 0;
-}
-
-.step-5 .fight-container {
-	background-position:-3850px 0;
-}
-
-.step-6 .fight-container {
-	background-position:-4620px 0;
-}
-
-.step-7 .fight-container {
-	background-position:-5390px 0;
 }
 
 .fight-container .next {
@@ -177,6 +192,7 @@
 	text-indent:5px;
 	text-transform:uppercase;
 	width:202px;
+	z-index:10;
 }
 
 .fight-container .next:hover {
@@ -201,6 +217,7 @@
 	text-align:center;
 	text-transform:uppercase;
 	width:327px;
+	z-index:10;
 }
 
 .step-start .fight-container .title {
@@ -262,7 +279,65 @@
 }
 
 .fighter-infos {
-	text-align:center;
+	background:#e3e7ea;
+    padding: 8px;
+    border-radius: 4px;
+    box-shadow: 0 0 7px rgba(0,0,0,.5);
+    position:absolute;
+    width:192px;
+    text-align:center;
+    right:-40px;
+}
+
+.fighter-arrow {
+    width: 70px;
+    height: 16px;
+    overflow: hidden;
+    position: absolute;
+    left: 50%;
+    margin-left: -35px;
+    bottom: -10px;
+  }
+ 
+.fighter-arrow:after {
+	background:#e3e7ea;
+    content: "";
+    position: absolute;
+    left: 20px;
+    bottom:4px;
+    width: 25px;
+    height: 25px;
+    box-shadow: 6px 5px 9px -9px black;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    tranform: rotate(45deg);
+}
+
+.fighter_one .fighter-infos {
+	top:-40px;
+}
+
+.step-start .fighter_one .fighter-infos {
+	top:-25px;
+}
+
+.fighter_two .fighter-infos {
+	bottom:-58px;
+}
+
+.step-start .fighter_two .fighter-infos {
+	bottom:-50px;
+}
+
+.fighter_two .fighter-arrow {
+	bottom:auto;
+	top:-16px;
+}
+
+.fighter_two .fighter-arrow:after {
+	bottom:-20px;
 }
 
 .fighter-infos .name, .fighter-infos .result {
@@ -289,4 +364,166 @@
 	border-color:#000;
 }
 
+.forescape {
+	background:url(/img/duels/plans/duels_plan1_e0_1.png) -147px 0 no-repeat, url(/img/duels//plans/duels_plan1_e0_1.png) right top no-repeat;
+	position:absolute;
+	left:0;
+	height:102px;
+	bottom:0;
+	z-index:4;
+	width:100%;
+}
 
+.step-2 .forescape {
+	background:url(/img/duels/plans/duels_plan1_e2_1.png) right top no-repeat;
+	bottom:-41px;
+}
+
+.step-3 .forescape {
+	background: url(/img/duels/plans/duels_plan1_e3_1.png) 0 0 no-repeat;
+	height:265px;
+	bottom:0;
+}
+
+.step-4 .forescape {
+	background: url(/img/duels/plans/duels_plan1_e4_1.png) 0 0 no-repeat;
+	left: 160px;
+	height: 294px;
+	top: 207px;
+}
+
+.step-5 .forescape {
+	background: url(/img/duels/plans/duels_plan1_e5_1.png) -10px 0 no-repeat;
+	left: 0;
+	height: 294px;
+	top: 281px;
+	z-index:6;
+}
+
+.step-6 .forescape {
+	background: url(/img/duels/plans/duels_plan1_e6_1.png) 95% 0 no-repeat;
+	height:132px;
+}
+
+.step-7 .forescape {
+	background:none;
+}
+
+.foreground {
+	background:url(/img/duels/plans/duels_plan2_e0_1.png) 0 0 no-repeat;
+	position:absolute;
+	height:367px;
+	left:517px;
+	top:89px;
+	z-index:6;
+	width:100%;
+}
+
+.step-1 .foreground {
+	background: url(/img/duels/plans/duels_plan2_e1_1.png) 0 0 no-repeat;
+	height: 100%;
+	left: 220px;
+	top: 234px;
+}
+
+.step-2 .foreground {
+	background: url(/img/duels/plans/duels_plan2_e2_1.png) 0 0 no-repeat;
+	height: 100%;
+	left: 40px;
+	top: 200px;
+}
+
+.step-3 .foreground, .step-4 .foreground, .step-7 .foreground {
+	background:none;
+}
+
+.step-5 .foreground {
+	background: url(/img/duels/plans/duels_plan2_e0_1.png) 0 0 no-repeat;
+	position: absolute;
+	height: 367px;
+	left: 19px;
+	top: 89px;
+}
+
+.step-6 .foreground {
+	background: url(/img/duels/plans/duels_plan3_e6_1.png) 0 0 no-repeat;
+	height:249px;
+}
+
+.background {
+	background:url(/img/duels//plans/duels_plan4.png) left top no-repeat;
+	height:500px;
+	position:absolute;
+	z-index:4;
+	width:100%;
+}
+
+.step-1 .background {
+	background-position:-770px 0;
+}
+
+.step-2 .background {
+	background-position:-1540px 0;
+}
+
+.step-3 .background {
+	background-position:-2310px 0;
+}
+
+.step-4 .background {
+	background-position:-3080px 0;
+}
+
+.step-5 .background {
+	background-position:-3850px 0;
+}
+
+.step-6 .background {
+	background-position:-4620px 0;
+}
+
+.step-7 .background {
+	background-position:-5390px 0;
+}
+
+.landscape {
+	background:url(/img/duels/plans/duels_plan3_e0_1.png) left top no-repeat, url(/img/duels/plans/duels_plan3_e0_2.png) 496px 45px no-repeat;
+	height:222px;
+	left:20px;
+	top:92px;
+	position:absolute;
+	width:100%;
+	z-index:5;
+}
+
+.step-1 .landscape {
+	background:url(/img/duels/plans/duels_plan3_e1_1.png) 96% 35px no-repeat, url(/img/duels/plans/duels_plan3_e1_2.png) 576px 150px no-repeat;
+	height:100%;
+}
+
+.step-2 .landscape, .step-3 .landscape, .step-6 .landscape, .step-7 .landscape {
+	background:none;
+}
+
+.step-3 .landscape {
+	background:url(/img/duels/plans/duels_plan3_e3_1.png) 668px top no-repeat;
+	top:165px;
+}
+
+.step-4 .landscape {
+	background: url(/img/duels/plans/bg-second.png) -50px top no-repeat;
+	top: 220px;
+	left: 0;
+}
+
+.step-5 .landscape {
+	background: url(/img/duels/plans/duels_plan3_e0_2.png) 0 45px no-repeat;
+	height: 222px;
+	left: 20px;
+	top: 92px;	
+}
+
+.sky {
+	position:absolute;
+	z-index:6;
+}
