--- a/web/src/scss/_footer.scss
+++ b/web/src/scss/_footer.scss
@@ -37,12 +37,12 @@ footer {
 	padding:12px 0 0 0;
 }
 
-
 .footer-radios {
 	display:none;
 }
 
 .home .footer-radios {
+	clear:both;
 	display:block;
 	padding:10px 0 0 0;
 }
