--- a/web/src/scss/_header.scss
+++ b/web/src/scss/_header.scss
@@ -59,7 +59,9 @@ header h1 a {
 	padding:0;
 	text-indent:100%;
 	width:100%;
-	white-space:nowrap;
+	width: 352px;
+	white-space: nowrap;
+	height: 72px;
 }
 
 header .traces a {
