--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -16,15 +16,14 @@
 }
 
 .traces .timeline li {
+	background:#fff;
 	display: inline-block;
 	overflow: hidden;
-	margin: 0;
+	margin: 0 1px 0 0;
 	padding: 0;
-	width: 6px;
-	height: 6px;
-	border: 1px solid #ccc;
+	width: 7px;
+	height: 7px;
 	text-indent: 100%;
-	font-size: 6px;
 }
 
 .traces .timeline li.trace {
@@ -33,23 +32,24 @@
 
 .traces .timeline-zoom {
 	overflow: hidden;
-	margin: 0;
+	margin:10px auto 0 auto;
 	padding: 0;
-	width: 796px;
-	height: 30px;
+	width: 720px;
+	height: 40px;
 }
 .traces .timeline-zoom ul {
 	margin: 0;
 	padding: 0;
 	width: 7200px;
-	height: 20px;
+	height: 40px;
 	list-style: none;
 }
 
 .traces .timeline .slider {
 	position: absolute;
-	width: 700px;
+	width: 720px;
 	height: 18px;
+	margin: 0 0 0 -5px;
 }
 
 .traces .ui-slider-handle {
@@ -320,4 +320,32 @@
 	-webkit-box-shadow: 0 -6px 6px rgba(0,0,0,0.2);
 	-moz-box-shadow: 0 -6px 6px rgba(0,0,0,0.2);
 	box-shadow: 0 -6px 6px rgba(0,0,0,0.2);
+}
+
+.timeline-left {
+	border-right:1px solid #fff;
+	display:block;
+	float:left;
+	height:75px;
+	margin:0;
+	padding:5px 15px 0 15px;
+	width:800px;
+}
+
+.timeline-right {
+	display:block;
+	float:right;
+	height:65px;
+	margin:0;
+	padding:15px 14px 0 14px;
+	width:140px;
+}
+
+.selectors label {
+	clear: both;
+	color: #fff;
+	display: block;
+	font: 400 14px/1.3 'Lato', Verdana, Arial, sans-serif;
+	margin: 0;
+	padding: 0 0 10px 0;
 }
