--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -8,6 +8,7 @@
 	padding:0;
 	width:258px;
 	overflow: hidden;
+        position: relative;
 }
 .streetview-left .container {
 	width: 600px;
@@ -136,4 +137,28 @@
 .detail .desc {
 	color:#383C40;
 	font:normal 12px/1.3 'Lato', Arial, sans-serif;
+}
+
+#container-minimap{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 258px;
+    height: 200px;
+}
+
+#minimap{
+        display: block;
+        width: 100%;
+        height: 100%;
+       
+
+}
+
+#minimap a{
+        display:none;
+}
+
+#minimap.hide{
+        display:none;
 }
