--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -164,7 +164,7 @@
 
 .traces-left-stats small {
 	color:#4C565D;
-	display:block;
+	display:none;
 	font:400 11px/1.1 'Lato', Verdana, Arial, sans-serif;
 	margin:0;
 	padding:0;
