fix places jScrollPane, fix Traces Slider

--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -49,7 +49,7 @@
 	position: absolute;
 	width: 720px;
 	height: 18px;
-	margin: 0 0 0 -5px;
+	margin: 0 0 0 41px;
 }
 
 .traces .ui-slider-handle {
@@ -58,6 +58,7 @@
 	outline:none;
 	width: 89px;
 	height: 28px;
+	margin-left: -45px;
 }
 
 .traces-left {
