--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -22,7 +22,7 @@
 	float: left;
 }
 
-.streetview-list {
+.streetview-list-container {
 	height: 420px;
 	overflow: auto;
 }
@@ -68,7 +68,7 @@
 	padding:0;
 	-moz-box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);
-	box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);	
+	box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 .streetview-list a {
@@ -151,7 +151,7 @@
         display: block;
         width: 100%;
         height: 100%;
-       
+
 
 }
 
