--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -30,6 +30,10 @@
 	background-color: #222;
 }
 
+.traces .timeline li.yellow {
+	background-color: #FFD800;
+}
+
 .traces .timeline-zoom {
 	overflow: hidden;
 	margin:10px auto 0 auto;
@@ -349,4 +353,22 @@
 	font: 400 14px/1.3 'Lato', Verdana, Arial, sans-serif;
 	margin: 0;
 	padding: 0 0 10px 0;
+}
+
+.traces .map-toolbox {
+	position:absolute;
+	left:80px;
+	top:12px;
+	z-index: 999;
+}
+.back {
+	background:url(/img/traces/bg-back.png) 5px 50% no-repeat #DCDCDC;
+	border:1px solid #959596;
+	color:#4C565E;
+	font:700 14px/34px 'Lato', Verdana, Arial, sans-serif;
+	height:34px;
+	display:inline-block;
+	margin:0 10px 0 0;
+	padding:0 15px 0 28px;
+	border-radius:4px;
 }
