--- a/web/src/scss/_selectbox.scss
+++ b/web/src/scss/_selectbox.scss
@@ -12,7 +12,7 @@
 	text-align:left;
 	position:relative;
 	width:205px;
-	z-index:2;
+	z-index:12;
 }
 
 .sbSelector {
@@ -56,9 +56,9 @@
 	margin:0;
 	padding: 0;
 	position: absolute;
-	top: 29px;
+	top:-130px !important;
 	width: 100%;
-	height:240px;
+	max-height:130px !important;
 	overflow:auto;
 	z-index: 1;
 }
