--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -43,7 +43,6 @@
 }
 
 .step-results .results .fighter_one, .step-results .results .fighter_two {
-	background:none;
 	bottom:auto;
 	left:auto;
 	top:auto;
@@ -716,15 +715,65 @@
 	text-align:right;
 }
 
-.results .fighter_one .portrait {
-	float:right;
-}
-
-.results .fighter_two .portrait {
-	float:left;
-}
-
 .selector .close {
 	top:2em;
 	right:4em;
 }
+
+.legend-results {
+	background:#D9D9D4;
+}
+
+.result_fighter {
+	color:#6289A7;
+}
+
+.result_fighter .active {
+	color:#C1272D;
+}
+
+.results .fighter_one, .results .fighter_two {
+	background:url(/img/duels/bg-results-cell.png) 111% 50% no-repeat;
+	padding:5px 25px;
+}
+
+.results .fighter_two {
+	background-position:-13px 50%;
+}
+
+.results .header-results {
+	background:none;
+	border:none;
+	vertical-align:top;
+	position:relative;
+	height:82px !important;
+}
+
+.legend-results:first-child {
+	border:none;
+}
+
+.results .fighter_one .portrait {
+	position:absolute;
+	right:-60px;
+	top:-20px;
+}
+
+.results .fighter_two .portrait {
+	position:absolute;
+	left:-60px;
+	top:-20px;
+}
+
+.results .portrait img {
+	height:114px;
+	width:auto;
+}
+
+.results .name, .results .name strong {
+	font:400 18px/1.3 'Oswald', Verdana, Arial, sans-serif;	
+}
+
+.results .no-border {
+	border:none;
+} 
