--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -12,6 +12,9 @@ a { outline: 0; text-decoration:none;}
 img { border: 0; }
 .left { float:left; }
 .right { float:right; }
+.v-top { vertical-align:top; }
+.aligncenter { text-align:center; }
+.no-border { border:none; }
 .unstyled { list-style-type:none; margin:0; padding:0; }
 .clearfix { zoom:1; }
 .clearfix:before, .clearfix:after { content:""; display:table; }
