--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -27,7 +27,9 @@
 	overflow: auto;
 }
 .streetview-left .detail {
+        position: relative;
 	width:258px;
+        height: 500px;
 	float: left;
 }
 
@@ -37,6 +39,7 @@
 	margin:0;
 	padding:0;
 	width:742px;
+        overflow: hidden;
 }
 
 .streetview-list {
@@ -139,20 +142,15 @@
 	font:normal 12px/1.3 'Lato', Arial, sans-serif;
 }
 
-#container-minimap{
+
+
+#minimap{
+        display: block;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 258px;
     height: 200px;
-}
-
-#minimap{
-        display: block;
-        width: 100%;
-        height: 100%;
-
-
 }
 
 #minimap a{
@@ -161,4 +159,23 @@
 
 #minimap.hide{
         display:none;
+}
+
+
+#gmap-hyperlapse{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+
+
+#gmap-hyperlapse.hide{
+    display: none;
+    visible: hidden;
+}
+
+#gmap-streetview.hide{
+    display: none;
+    visible: hidden;
 }
