--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -31,6 +31,10 @@ img { border: 0; }
 	display: none;
 }
 
+.content{
+    position: relative;
+}
+
 .content .left {
 	float: left;
 	width: 250px;
@@ -48,6 +52,14 @@ img { border: 0; }
     display:block;
     width: 100%;
     height:489px;
+}
+
+.content #city_search{
+    position: absolute;
+    z-index: 99;
+    top: 15px;
+    left: 40px;
+    padding: 2px 2px;
 }
 
 #gmap-traces, #gmap-search, #gmap-streetview{
