--- a/web/src/scss/_home.scss
+++ b/web/src/scss/_home.scss
@@ -89,3 +89,31 @@
 	text-indent:100%;
 	width:24px;
 }
+
+/* AUTOCOMPLETE */
+
+.ui-autocomplete {
+	background:#fff;
+	border:8px solid #fff;
+	border-radius:8px;
+	outline:0;
+	list-style-type:none;
+	height:200px;
+	overflow:auto;
+	margin:0;
+	padding:0;
+	width:224px;
+	display:block !important;
+}
+
+.ui-menu-item {
+	border-bottom:1px solid #93AAC5;
+	clear:both;
+	cursor:pointer;
+	display:block;
+	color:#93AAC5;
+	font:400 14px/1.3 'Lato', Verdana, Arial, sans-serif;
+	margin:0 8px 0 0;
+	padding:3px 0;
+}
+	
