--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -251,7 +251,7 @@
 	background:url(/img/traces/traces_vainqueur_more_off.png) 100% 0 no-repeat;
 	color:#383C40;
 	display:block;
-	font:700 18px/47px 'Lato', Verdana, Arial, sans-serif;
+	font:700 18px/47px 'Oswald', Verdana, Arial, sans-serif;
 	margin:0;
 	overflow:hidden;
 	padding:0 45px 0 0;
