--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -168,8 +168,6 @@
     overflow: hidden;
 }
 
-
-
 #gmap-hyperlapse.hide{
     display: none;
     visible: hidden;
@@ -178,4 +176,21 @@
 #gmap-streetview.hide{
     display: none;
     visible: hidden;
+}
+
+.firstHeading {
+	display:block;
+	color:#383C40;
+	font:700 15px/1.3 'Oswald', Verdana, Arial, sans-serif;
+	margin:0;
+	padding:0;
+	text-transform:uppercase;	
+}
+
+#bodyContent p {
+	display:block;
+	color:#000;
+	font:normal 12px/1.3 'Lato', Arial, sans-serif;
+	margin:0;
+	padding:0;
 }
