--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -198,6 +198,7 @@
 	border:none;
 	background-image:url(/img/vainqueurs/icon-abandon.png);
 	background-position:10px 50%;
+	line-height:1.3;
 }
 
 .winners_list {
@@ -588,4 +589,8 @@
 	top:20px;
 	width:52px;
 	white-space:nowrap;
+}
+
+.ui-tooltip {
+	z-index:90;
 }
