--- a/web/src/scss/_footer.scss
+++ b/web/src/scss/_footer.scss
@@ -21,10 +21,10 @@ footer {
 .footer-links li {
 	color:#7693a5;
 	display:inline-block;
-	margin:0;
+	margin:0-3px 0 0;
 	font:400 9px/1.3 'Lato', Verdana, Arial, sans-serif;
 	margin:0;
-	padding:0 4px;
+	padding:0;
 	text-transform:uppercase;
 }
 
