Modification page recherche

--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -419,6 +419,10 @@
 	border-color:#000;
 }
 
+.step-7 .winner .fighter-infos > .name {
+	display:none;
+}
+
 .forescape {
 	background:url(/img/duels/plans/duels_plan1_e0_1.png) -147px 0 no-repeat, url(/img/duels//plans/duels_plan1_e0_1.png) right top no-repeat;
 	position:absolute;
