--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -178,7 +178,7 @@
     visible: hidden;
 }
 
-.firstHeading {
+.firstHeading, #gmap-search h3 {
 	display:block;
 	color:#383C40;
 	font:700 15px/1.3 'Oswald', Verdana, Arial, sans-serif;
@@ -187,7 +187,7 @@
 	text-transform:uppercase;	
 }
 
-#bodyContent p {
+#bodyContent p, #gmap-search p {
 	display:block;
 	color:#000;
 	font:normal 12px/1.3 'Lato', Arial, sans-serif;
