--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -227,6 +227,25 @@
 	background-image:url(/img/duels/bt-next-off.png);
 }
 
+.fight-container .prev {
+	background:url(/img/duels/bt-prev-off.png) left top no-repeat;
+	color:#fff;
+	display:block;
+	height:104px;
+	margin:0;
+	padding:0;
+	position:absolute;
+	text-indent: -100%;
+	left:10px;
+	top:250px;
+	width:75px;
+	z-index:10;
+}
+
+.fight-container .prev:hover {
+	background-image:url(/img/duels/bt-prev-off.png);
+}
+
 .step-start .fight-container .next {
 	text-indent:0;
 }
@@ -779,12 +798,12 @@
 }
 
 .results .name, .results .name strong {
-	font:400 18px/1.3 'Oswald', Verdana, Arial, sans-serif;	
+	font:400 18px/1.3 'Oswald', Verdana, Arial, sans-serif;
 }
 
 .results .no-border {
 	border:none;
-} 
+}
 
 .legend-results {
 	width:180px;
