--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -192,7 +192,7 @@
 	color:#000;
 	font:normal 12px/1.3 'Lato', Arial, sans-serif;
 	margin:0;
-	padding:0;
+	padding:5px 0;
 }
 
 .displayStreetView, .displayHyperlapse {
@@ -216,3 +216,4 @@
 .displayHyperlapse a {
 	background:#93C403;
 }
+
