--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -166,6 +166,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 #gmap-hyperlapse.hide{
@@ -216,4 +217,32 @@
 .displayHyperlapse a {
 	background:#93C403;
 }
+
+#btnCloseHyperlapse{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+
+#hyperlapseTimeline{
+    position: absolute;
+    bottom: 10px;
+    left: 13px;
+    display: block;
+    width: 719px;
+    height: 53px;
+    background: url(/img/lieux/lieux_hyperlapse_timeline.png) no-repeat;
+}
+
+#hyperlapseTimeline .loader{
+    display: block;
+    width: 636px;
+    height: 2px;
+    position: absolute;
+    left: 42px;
+    top: 25px;
+    background-color: green;
+}
+
 
